--- a/static/styles.css
+++ b/static/styles.css
@@ -600,17 +600,17 @@ input.switch:checked::before {
     width: 95%;
   }
   .date-modal-body {
-    flex-direction: row;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: stretch;
   }
   .date-modal-left {
-    width: 7rem;
-    border-right: 1px solid var(--ultra-highlight);
-    border-bottom: none;
-    margin-bottom: 0;
+    width: 100%;
+    border-right: none;
+    border-bottom: 1px solid var(--ultra-highlight);
+    margin-bottom: var(--spacing-sm);
   }
   .date-modal-right {
-    min-width: auto;
+    min-width: 0;
   }
   .date-inputs {
     flex-direction: column;
