--- a/static/styles.css
+++ b/static/styles.css
@@ -600,14 +600,14 @@ input.switch:checked::before {
     width: 95%;
   }
   .date-modal-body {
-    flex-direction: column;
-    align-items: stretch;
+    flex-direction: row;
+    align-items: flex-start;
   }
   .date-modal-left {
-    width: 100%;
-    border-right: none;
-    border-bottom: 1px solid var(--ultra-highlight);
-    margin-bottom: var(--spacing-sm);
+    width: 7rem;
+    border-right: 1px solid var(--ultra-highlight);
+    border-bottom: none;
+    margin-bottom: 0;
   }
   .date-modal-right {
     min-width: 0;
