--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -72,13 +72,15 @@
               <div class="date-input">
                 <label for="startBox">Start</label>
                 <input id="startBox" type="text">
-                <div id="startPane" class="date-pane"></div>
               </div>
               <div class="date-input">
                 <label for="endBox">End</label>
                 <input id="endBox" type="text">
-                <div id="endPane" class="date-pane"></div>
               </div>
+            </div>
+            <div class="calendars">
+              <div id="startPane" class="date-pane"></div>
+              <div id="endPane" class="date-pane"></div>
             </div>
             <nav id="calTabs" class="buttons tab-buttons mb-2">
               <button type="button" class="mdc-button mdc-button--raised is-active" data-target="startPane">Start</button>
