--- a/templates/transactions.html
+++ b/templates/transactions.html
@@ -82,7 +82,7 @@
               <div id="startPane" class="date-pane"></div>
               <div id="endPane" class="date-pane"></div>
             </div>
-            <nav id="calTabs" class="buttons tab-buttons mb-2">
+            <nav id="calTabs" class="buttons tab-buttons">
               <button type="button" class="mdc-button mdc-button--raised is-active" data-target="startPane">Start</button>
               <button type="button" class="mdc-button mdc-button--raised" data-target="endPane">End</button>
             </nav>
